k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: fauzu/wimble-api_gateway:latest
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: wimble
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api-gateway
  type: ClusterIP
