k8s/user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: user-db-storage
          persistentVolumeClaim:
            claimName: user-db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: wimble
spec:
  ports:
    - port: 5432
  selector:
    app: user-db
