k8s/user-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-redis
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-redis
  template:
    metadata:
      labels:
        app: user-redis
    spec:
      containers:
        - name: user-redis
          image: redis:alpine
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: user-redis
  namespace: wimble
spec:
  ports:
    - port: 6379
  selector:
    app: user-redis
