k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: wimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: fauzu/wimble-user_service:latest
        ports:
        - containerPort: 8001
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wimble
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: user-service
  type: ClusterIP
