k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wimble-ingress
  namespace: wimble
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: local 
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
